@@ -10,10 +10,10 @@ import net.fabricmc.fabric.api.biome.v1.BiomeSelectors;
 import net.minecraft.block.*;
 import net.minecraft.block.enums.BambooLeaves;
 import net.minecraft.block.enums.DoubleBlockHalf;
-import net.minecraft.entity.damage.DamageSource;
+import net.minecraft.entity.damage.DamageTypes;
 import net.minecraft.entity.effect.StatusEffects;
 import net.minecraft.particle.ParticleTypes;
-import net.minecraft.world.biome.Biome;
+import net.minecraft.registry.tag.BiomeTags;
 import net.minecraft.world.biome.BiomeKeys;
 
 import java.util.List;
@@ -22,15 +22,15 @@ import java.util.function.Predicate;
 public class MoobloomsEntities {
 	private static final List<Block> NYLIUM = ImmutableList.of(Blocks.CRIMSON_NYLIUM, Blocks.WARPED_NYLIUM);
 	private static Predicate<BiomeSelectionContext> flowerForest = BiomeSelectors.includeByKey(BiomeKeys.FLOWER_FOREST);
-	private static Predicate<BiomeSelectionContext> nether = BiomeSelectors.categories(Biome.Category.NETHER);
+	private static Predicate<BiomeSelectionContext> nether = BiomeSelectors.tag(BiomeTags.IS_NETHER);
 	private static Predicate<BiomeSelectionContext> sunflowerPlains = BiomeSelectors.includeByKey(BiomeKeys.SUNFLOWER_PLAINS);
 	private static Predicate<BiomeSelectionContext> bambooJungle = BiomeSelectors.includeByKey(BiomeKeys.BAMBOO_JUNGLE);
-	private static Predicate<BiomeSelectionContext> badlands = BiomeSelectors.categories(Biome.Category.MESA);
-	private static Predicate<BiomeSelectionContext> endIslands = BiomeSelectors.categories(Biome.Category.THEEND).and(BiomeSelectors.excludeByKey(BiomeKeys.THE_END));
+	private static Predicate<BiomeSelectionContext> badlands = BiomeSelectors.tag(BiomeTags.IS_BADLANDS);
+	private static Predicate<BiomeSelectionContext> endIslands = BiomeSelectors.tag(BiomeTags.IS_END).and(BiomeSelectors.excludeByKey(BiomeKeys.THE_END));
 	private static Predicate<BiomeSelectionContext> crimsonForest = BiomeSelectors.includeByKey(BiomeKeys.CRIMSON_FOREST);
 	private static Predicate<BiomeSelectionContext> warpedForest = BiomeSelectors.includeByKey(BiomeKeys.WARPED_FOREST);
-	private static Predicate<BiomeSelectionContext> mushroom = BiomeSelectors.categories(Biome.Category.MUSHROOM);
-	
+	private static Predicate<BiomeSelectionContext> mushroom = BiomeSelectors.includeByKey(BiomeKeys.MUSHROOM_FIELDS);
+
 	public static final Moobloom DANDELION_MOOBLOOM = new Moobloom.Builder().name(Mooblooms.id("dandelion_moobloom")).blockState(Blocks.DANDELION.getDefaultState()).spawnEntry(new SpawnEntry(flowerForest, Mooblooms.config.dandelionMoobloom)).spawnEgg(0xFED639, 0xFBEBAE).configCategory(Mooblooms.config.dandelionMoobloom).build();
 	public static final Moobloom POPPY_MOOBLOOM = new Moobloom.Builder().name(Mooblooms.id("poppy_moobloom")).blockState(Blocks.POPPY.getDefaultState()).spawnEntry(new SpawnEntry(flowerForest, Mooblooms.config.poppyMoobloom)).spawnEgg(0xBF2529, 0xFAB8B7).configCategory(Mooblooms.config.poppyMoobloom).build();
 	public static final Moobloom BLUE_ORCHID_MOOBLOOM = new Moobloom.Builder().name(Mooblooms.id("blue_orchid_moobloom")).blockState(Blocks.BLUE_ORCHID.getDefaultState()).spawnEntry(new SpawnEntry(flowerForest, Mooblooms.config.blueOrchidMoobloom)).spawnEgg(0x27A9F4, 0xABE3FB).configCategory(Mooblooms.config.blueOrchidMoobloom).build();
@@ -40,7 +40,7 @@ public class MoobloomsEntities {
 	public static final Moobloom WITHER_ROSE_MOOBLOOM = new Moobloom.Builder().name(Mooblooms.id("wither_rose_moobloom")).blockState(Blocks.WITHER_ROSE.getDefaultState()).fireImmune().ignoredEffects(ImmutableList.of(StatusEffects.WITHER)).particle(ParticleTypes.SMOKE).spawnEntry(new SpawnEntry(nether, Mooblooms.config.witherRoseMoobloom)).spawnEgg(0x2A1F19, 0x636363).configCategory(Mooblooms.config.witherRoseMoobloom).build();
 	public static final Moobloom SUNCOWER = new Moobloom.Builder().name(Mooblooms.id("suncower")).blockState(Blocks.SUNFLOWER.getDefaultState().with(TallPlantBlock.HALF, DoubleBlockHalf.UPPER)).spawnEntry(new SpawnEntry(sunflowerPlains, Mooblooms.config.suncower)).spawnEgg(0xF19D25, 0xFFEC4F).configCategory(Mooblooms.config.suncower).build();
 	public static final Moobloom BAMBMOO = new Moobloom.Builder().name(Mooblooms.id("bambmoo")).blockState(Blocks.BAMBOO.getDefaultState().with(BambooBlock.LEAVES, BambooLeaves.SMALL)).spawnEntry(new SpawnEntry(bambooJungle, Mooblooms.config.bambmoo)).spawnEgg(0x538209, 0x97D155).cannotPlaceBlocks().configCategory(Mooblooms.config.bambmoo).build();
-	public static final Moobloom COWCTUS = new Moobloom.Builder().name(Mooblooms.id("cowctus")).blockState(Blocks.CACTUS.getDefaultState()).blockStateRenderer(-0.3F, -0.4F, 0.3F, -0.5D, -1.2D, -0.5D).ignoredDamageSources(ImmutableList.of(DamageSource.CACTUS)).spawnEntry(new SpawnEntry(badlands, Mooblooms.config.cowctus)).spawnEgg(0x39581A, 0x9FA76D).cannotPlaceBlocks().configCategory(Mooblooms.config.cowctus).build();
+	public static final Moobloom COWCTUS = new Moobloom.Builder().name(Mooblooms.id("cowctus")).blockState(Blocks.CACTUS.getDefaultState()).blockStateRenderer(-0.3F, -0.4F, 0.3F, -0.5D, -1.2D, -0.5D).ignoredDamageTypes(List.of(DamageTypes.CACTUS)).spawnEntry(new SpawnEntry(badlands, Mooblooms.config.cowctus)).spawnEgg(0x39581A, 0x9FA76D).cannotPlaceBlocks().configCategory(Mooblooms.config.cowctus).build();
 	public static final Moobloom CHORUS_MOOBLOOM = new Moobloom.Builder().name(Mooblooms.id("chorus_moobloom")).blockState(Blocks.CHORUS_PLANT.getDefaultState().with(ChorusPlantBlock.DOWN, true)).blockStateRenderer(-0.5F, -0.6F, 0.5F, -0.5D, -0.8D, -0.5D).spawnEntry(new SpawnEntry(endIslands, Mooblooms.config.chorusMoobloom)).spawnEgg(0x562E56, 0xD6BBD6).cannotPlaceBlocks().configCategory(Mooblooms.config.chorusMoobloom).build();
 	
 	public static final Moobloom CRIMSON_MOOSHROOM = new Moobloom.Builder().name(Mooblooms.id("crimson_mooshroom")).blockState(Blocks.CRIMSON_FUNGUS.getDefaultState()).fireImmune().validBlocks(NYLIUM).spawnEntry(new SpawnEntry(crimsonForest, Mooblooms.config.crimsonMooshroom)).spawnEgg(0x730408, 0xFF6500).configCategory(Mooblooms.config.crimsonMooshroom).build();
